--- a/package.json
+++ b/package.json
@@ -5,30 +5,33 @@
   "version": "0.1.0",
   "author": "Billy Jacoby <billyjacoby@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "bootstrap": "^4.3.1",
-    "gatsby": "^2.3.34",
-    "gatsby-image": "^2.0.41",
-    "gatsby-plugin-manifest": "^2.0.29",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.18.7",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sass": "^2.1.24",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-source-contentful": "^2.1.67",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-sharp": "^2.3.7",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.6.1"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "prettier": "^1.17.0"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
